Register and Login api and page for Login and Register

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,22 +1,23 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "description": "This is back-end for my final project",
-  "main": "index.js",
+  "description": "This my back-end for my final project",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon -r esm server.js"
+      "start": "nodemon server.js"
   },
   "author": "Truong Hoang Hieu",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "esm": "^3.2.25",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2",
+    "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
