--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -2,7 +2,7 @@
 node_modules/
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -11,6 +11,7 @@ pnpm-debug.log*
 
 # Environment Variables
 .env
+.env.*
 
 # Build and dependencies
 build/
@@ -34,7 +35,7 @@ coverage/
 *.sublime-workspace
 
 # MacOS files
-*.DS_Store
+.DS_Store
 
 # Linux files
 *.swp
@@ -63,5 +64,14 @@ yarn.lock
 /secrets
 
 # Custom logs and generated files
-logs/
 /tmp/
+logs/
+
+# Optional: Additional files for frameworks and caches
+.next/
+.nuxt/
+out/
+.cache/
+npm-cache/
+node-repl-history
+*.pid
