--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,8 +18,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^6.9.16",
     "razorpay": "^2.9.4",
+    "stripe": "^17.3.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
